--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,157 @@
-.App {
-  text-align: center;
-}
+body{
+    min-height: 100vh;
+    border-left: 5px solid lightgray;
+    max-width: 1000px;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif
+    }
+    
+    header,main,footer{
+        padding: 1rem 2rem;
+    }
+    
+    h1{
+        font-size: 4rem;
+        color: tomato;
+        font-weight: 200;
+        margin: 0;
+    }
+    
+    header h2{
+    
+        font-weight:400;
+        color: black;
+        margin-bottom: 20px;
+        margin-top: 5px;
+        /* margin-top: -40px; */
+    } 
+    
+    main{
+        margin-top: 4rem;
+    }
+    
+    .nav{
+        margin-top: 1.5rem;
+    }
+    
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+    .nav ul {
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+        display: flex;
+        justify-content: space-between;
+        list-style-type: none; 
+        /* margin-left: 25px; */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+        /* justify-content: flex-start;
+        padding: 0;
+        margin: 0; */
+    }
+    
+    /* li{
+        padding: 15px;
+           
+    } */
+    
+    .nav ul li a {
 
-.App-link {
-  color: #61dafb;
-}
+        text-decoration: none;
+        color: darkgray;
+        }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+        .nav ul li  {
+
+            border-bottom: 1px solid darkgray;
+
+        }
+
+       
+    footer nav ul{
+
+        display: flex;
+        justify-content: space-between;
+        /* justify-content: flex-start; */
+        margin-bottom: 1rem;
+        list-style-type: none;
+    }
+    
+    .footer-nav ul li a{
+         
+        text-decoration: none;
+        color: tomato;
+        /* font-size: 14px;
+        font-weight: 400;
+        margin-left: -2px;
+         */
+    }
+    
+    footer ul {
+        margin-left: -30px;
+    }
+    
+    aside{
+    
+        color:tomato;
+        padding-bottom:50px;
+        /* position: absolute; */
+        left: 950px;
+        display: flex;
+        justify-content: flex-end;
+    }
+    
+    p{
+        font-family: sans-serif;
+        line-height: 1.5;
+        color:rgb(95, 94, 94);
+        width:93%;
+        text-align: justify;
+        position: relative;
+    }
+    
+    h6{
+        font-size:14px; 
+        font-weight: 500; 
+        color: lightgray;
+        margin-left: 10px;
+        margin-top: -10px; 
+        
+    }
+    
+    .img{
+        width: 100%;
+    }
+    
+    article{
+    
+        padding-bottom: 1rem;
+        /* margin-top: 50px; */
+        margin-bottom: 4rem;
+        border-bottom: 1px solid lightgray;
+        /* padding: 2rem; */
+    }
+    
+    article time{
+        font-size:25px;
+        font-weight:400;
+        color:lightgray;
+    }
+    
+    article h2{
+        font-size:35px;
+        font-weight:400;
+        color:black;
+        margin-bottom:10px;
+            /* margin-top:5px */
+    }
+    
+    p::first-letter{
+       color:lightgray;
+      font-size: 4.5rem;
+      float: left;
+      line-height: 1;
+      padding:0 .3rem;
+      margin:0 .3rem 0 0;
+    }
+    
+    
+     
